bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: not found: value If
                         If (litMessage()=="X") {recule();recule();}} 
                         ^