bdr.BDR.scala.code
while (estSurMessage()) {if (litMessage()=="R") {droite();avance();}
                         if (litMessage()=="L") {gauche();avance();}
                         if (litMessage()=="I") {retourne();avance();}
                         if (litMessage()=="A") {avance();}
                         if (litMessage()=="B") {avance();avance();}
                         if (litMessage()=="C") {avance();avance();avance();}
                         if (litMessage()=="Z") {recule();}
                         if (litMessage()=="Y") {recule();recule();}
                         If (litMessage()=="X") {recule();recule();}}